--- a/Assets/css/styles.css
+++ b/Assets/css/styles.css
@@ -8,6 +8,8 @@ body, html {
     padding: 0;
     font-family: 'Roboto', Arial, sans-serif;
     background-color: #0F6A37;
+    overflow-x: hidden; /* This prevents horizontal scrolling */
+    width: 100%;
 }
 
 header {
@@ -91,7 +93,7 @@ button:hover {
     background-color: #169a4f;
 }
 
-.about-container, .stats-container, .services-container, .images-container, .area-container, .footer-container {
+.about-container, .stats-container, .services-container, .images-container {
     padding: 30px;
 }
 
@@ -292,10 +294,26 @@ button:hover {
     display: flex;
     flex-direction: column;
     align-items: center;
-    background-color: white;
-    padding: 10px;
-    width: 50%;
+    width: 100%;
     overflow: hidden;
+    margin: 0 auto;
+    text-align: center;
+    max-width: 800px;
+}
+
+.comparison-slider-wrapper {
+    width: 100%;
+    display: flex;
+    justify-content: center;
+}
+
+.comparison-slider {
+    max-width: 100%;
+    width: auto;
+}
+
+.images-container h1 {
+    color: white;
 }
 
 
@@ -364,7 +382,6 @@ button:hover {
 }
 
 footer {
-    max-width: 1200px;
     margin: 0 auto;
     padding: 0 20px;
 }
@@ -514,8 +531,8 @@ footer {
     }
 
     /*------------------ IMAGES ------------------ */
-    .comparison-slider {
-        max-width: 80%; /* Set the maximum width of each slider item */
+    .images-container {
+        max-width: 80%;
     }
 
     /*------------------ AREA ------------------ */
